--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
                 <span class="bi bi-camera-fill-nav-menu" aria-hidden="true"></span> OCR
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ocr-statistics">
+                <span class="bi bi-bar-chart-fill-nav-menu" aria-hidden="true"></span> OCR Statistics
+            </NavLink>
+        </div>
     </nav>
 </div>
 
